<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="co.com.celuweb.carterabaldomero.InformeRutaFragment">

    <Button
        android:id="@+id/btnExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@color/colorGrisOscuroLetra"
        android:fontFamily="@font/foco_std"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/exportar"
        android:textColor="@color/blanco"
        android:textSize="14sp" />
    <!--  **************** LINEA SEPARADORA ***************  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrisOscuro">

    </LinearLayout>
    <!--  BLOQUE DETALLE  -->


    <LinearLayout
        android:id="@+id/informeslayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBloqueDos"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/informeslayaout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBloqueDos"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/recaudos"
                    android:textColor="@color/blanco"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvValorClientesEnrutados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/informeslayaout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBloqueDos"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/foco_std"
                    android:text="Recibos pendientes:"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvVisitados2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/informeslayaout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBloqueDos"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/acuerdos_realizados"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvVisitados"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/informeslayaout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"

            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/acuerdos_comerciales"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNoVisitados"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"

                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/informeslayaout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBloqueDos"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/solicitudes_de_credito"
                    android:textColor="@color/blanco"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEfectividad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/informeslayaout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBloqueDos"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/clientes_bloqueados"
                    android:textColor="@color/blanco"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEfectividad2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:fontFamily="@font/foco_std"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>